--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "zustand": "^5.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "next": "15.1.6"
